--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: lightblue;
     font-family: Verdana;
 }  
 #content {
@@ -30,21 +30,20 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Sydney Burke</h1>
+        <h2>Sophomore in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a sophomore at Bob Jones University studying business administration. I work stage crew on campus and also work at a dog boarding and daycare facility.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
+            I attend Hampton Park Baptist Church in Greenville, SC. My favorite website is  
             <a href="https://mobilehymns.org/">here</a>, and you can email me  
             <a href="mailto:sgothard@bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy being outside. I love reading, hiking, biking, camping, and other outdoor activities. I love animals and currently have 2 dogs and 2 cats.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Business Administration<br />
         Bob Jones University<br />
         Example image:
         <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
