--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@ h3 {
         
          <p>I am a sophomore at Bob Jones University studying business administration. I work stage crew on campus and also work at a dog boarding and daycare facility.</p>
          <p>
-            I attend Hampton Park Baptist Church in Greenville, SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend Hampton Park Baptist Church in Greenville, SC.
          </p> 
          <p>
             I enjoy being outside. I love reading, hiking, biking, camping, and other outdoor activities. I love animals and currently have 2 dogs and 2 cats.
