--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h3 {
         Business Administration<br />
         Bob Jones University<br />
         Example image:
-        <img src="https://app.gemoo.com/share/image-annotation/636855042382282752?codeId=M079OGLVWAK4N&origin=imageurlgenerator&card=636855041564393472" />
+        <img src=/C:\Users\sydne\OneDrive\Pictures img_2542>
     </div>
 </body>
 </html>
