--- a/index.html
+++ b/index.html
@@ -14,30 +14,7 @@
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="72">
     <nav class="navbar navbar-expand-lg fixed-top bg-secondary text-uppercase navbar-light" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#page-top">SBurke</a>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dropdown </a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dropdown </a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dropdown </a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dropdown </a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dropdown </a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                    </li>
-                </ul><button class="btn btn-primary" type="button">Button</button>
-            </div>
-        </div>
+        <div class="container"><a class="navbar-brand" href="#page-top">SBurke</a></div>
     </nav>
     <header class="text-center text-white bg-primary masthead">
         <div class="container"><img class="img-fluid d-block mx-auto mb-5" src="assets/img/IMG_2542.jpg">
@@ -51,12 +28,12 @@
             <h2 class="text-uppercase text-center text-secondary">Portfolio</h2>
             <hr class="star-dark mb-5">
             <div class="row">
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-bs-toggle="modal"><img class="img-fluid" src="assets/img/portfolio/IMG_3020.jpeg"></a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-bs-toggle="modal"><img class="img-fluid" src="assets/img/portfolio/IMG_0913.jpeg"></a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-3" data-bs-toggle="modal"><img class="img-fluid" src="assets/img/portfolio/IMG_1481.jpeg"></a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-4" data-bs-toggle="modal"><img class="img-fluid" src="assets/img/portfolio/IMG_4169.jpeg"></a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-bs-toggle="modal"><img class="img-fluid" src="assets/img/portfolio/IMG_2062.jpeg"></a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-6" data-bs-toggle="modal"><img class="img-fluid" src="assets/img/portfolio/IMG_2485.jpeg"></a></div>
+                <div class="col-md-6 col-lg-4"><img class="img-fluid" src="assets/img/portfolio/IMG_3020.jpeg"></div>
+                <div class="col-md-6 col-lg-4"><img class="img-fluid" src="assets/img/portfolio/IMG_0913.jpeg"></div>
+                <div class="col-md-6 col-lg-4"><img class="img-fluid" src="assets/img/portfolio/IMG_1481.jpeg"></div>
+                <div class="col-md-6 col-lg-4"><img class="img-fluid" src="assets/img/portfolio/IMG_4169.jpeg"></div>
+                <div class="col-md-6 col-lg-4"><img class="img-fluid" src="assets/img/portfolio/IMG_2062.jpeg"></div>
+                <div class="col-md-6 col-lg-4"><img class="img-fluid" src="assets/img/portfolio/IMG_2485.jpeg"></div>
             </div>
         </div>
     </section>
